k8s-manifests/base/product/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product
          image: akhilthyadi/kube-product:latest
          ports:
            - containerPort: 8080
